# desktop

./: .gitignore  LICENSE  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
scripts/: prepare-bundle.ps1  prepare-bundle.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  openclaw.rs  pty_manager.rs  settings.rs
src/components/: SettingsPanel.tsx  StatusBar.tsx  TabBar.tsx  TerminalView.tsx  UpdateNotice.tsx  WebUIView.tsx  WelcomePage.tsx
src/hooks/: useAutostart.ts  usePtySession.ts  useTerminal.ts  useUpdater.ts
src/types/: index.ts
