[package]
name = "openclaw-desktop"
version = "0.0.1"
edition = "2021"

[lib]
name = "openclaw_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "openclaw-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
dirs = "6"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
